# northwind

./: README.md  docker-compose.yml  notebook.ipynb  proposed_marts.txt  pyproject.toml
northwind_dbt/: dbt_project.yml
northwind_dbt/models/marts/sales/: orders.sql  products_orders.sql
northwind_dbt/models/staging/northwind/: northwind__sources.yml  stg_northwind__categories.sql  stg_northwind__customers.sql  stg_northwind__employee_territories.sql  stg_northwind__employees.sql  stg_northwind__order_details.sql  stg_northwind__orders.sql  stg_northwind__products.sql  stg_northwind__regions.sql  stg_northwind__shippers.sql  stg_northwind__suppliers.sql  stg_northwind__territories.sql  stg_northwind__us_states.sql
