[tool.poetry]
name = "northwind"
version = "0.1.0"
description = ""
authors = ["Thomás Freire <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.7"
dbt-postgres = "^1.8.2"
harlequin-postgres = "^0.4.0"
pandas = "^2.2.3"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
